<resources>
    <string name="app_name">assign2</string>
    <string name="answer">Answer</string>
    <string name="are_you_sure_you_want_a_hint">Are you sure you want a hint?</string>
    <string name="are_you_sure_you_want_to_cheat">Are you sure you want to cheat?</string>
    <string name="cheat_button">Cheat!</string>
    <string name="correct_toast">+1 Marks!</string>
    <string name="exit">exit</string>
    <string name="exit1">exit</string>
    <string name="false_button">False</string>
    <string name="hint">hint!</string>
    <string name="hint1">Hint</string>
    <string name="hint_africa">4. Ask Omar for the answer.</string>
    <string name="hint_americas">5. You can buy many books on the Amazon website.</string>
    <string name="hint_asia">6. Lake Ontario is one of the five Great Lakes.</string>
    <string name="hint_australia">1. A resident of Canberra is known as a Canberran.</string>
    <string name="hint_mideast">3. The Suez Canal connects two seas.</string>
    <string name="hint_oceans">2. There are more fish in the Pacific Ocean.</string>
    <string name="incorrect_toast">-1 Marks!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="name_sahil">Sahil Lapsiwala</string>
    <string name="next2">NEXT ></string>
    <string name="next_button">Next</string>
    <string name="placeholder">%1$d</string>
    <string name="prev">prev</string>
    <string name="question_africa">4. The source of the Nile River is in Egypt.</string>
    <string name="question_americas">
5. The Amazon River is the longest river in the Americas.
</string>
    <string name="question_asia">
6. Lake Baikal is the oldest and deepest freshwater lake.
</string>
    <string name="question_australia">1. Canberra is the capital of Australia.</string>
    <string name="question_mideast">
3. The Suez Canal connects the Red Sea and the Indian Ocean.
</string>
    <string name="question_oceans">
2. The Pacific Ocean is larger than the Atlantic Ocean.
</string>
    <string name="questions_completed">QUESTIONS COMPLETED:</string>
    <string name="search_menu_title">Search</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="show_hint">show hint</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="total_marks">TOTAL MARKS:</string>
    <string name="true_button">True</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="_0">0</string>
    <string name="_02">0</string>
    <string name="prev2">PREV</string>
</resources>
