<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:gravity="center" android:orientation="vertical" android:background="#ff00ff00" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="25.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name_sahil" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="25.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/total_marks" />
            <TextView android:textSize="25.0sp" android:textColor="#ff000000" android:id="@+id/marksID" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_02" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="25.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/questions_completed" />
            <TextView android:textSize="25.0sp" android:textColor="#ff000000" android:id="@+id/questionsID" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_0" />
        </LinearLayout>
        <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@+id/question_text_view" android:background="#ffff00ff" android:layout_width="fill_parent" android:layout_height="50.0sp" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@+id/true_button" android:background="#ff0000ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="1.0sp" android:text="@string/true_button" android:width="100.0sp" style="?android:buttonBarButtonStyle" />
            <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@+id/false_button" android:background="#ff0000ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="1.0sp" android:text="@string/false_button" android:width="100.0sp" style="?android:buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@+id/hint_button" android:background="#ff0000ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="1.0sp" android:text="@string/hint" android:width="100.0sp" style="?android:buttonBarButtonStyle" />
            <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@+id/cheat_button" android:background="#ff0000ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="1.0sp" android:text="@string/cheat_button" android:width="100.0sp" style="?android:buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@+id/previous_button" android:background="#ff0000ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="1.0sp" android:text="@string/prev2" android:width="100.0sp" style="?android:buttonBarButtonStyle" />
            <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@+id/next_button" android:background="#ff0000ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="1.0sp" android:text="@string/next2" android:width="100.0sp" style="?android:buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>